# plaibox

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-plaibox-implementation.md  2026-04-13-cross-device-sync.md  2026-04-13-plaibox-app.md  2026-04-13-private-projects.md
docs/superpowers/specs/: 2026-04-10-plaibox-design.md  2026-04-13-cross-device-sync-design.md  2026-04-13-plaibox-app-design.md  2026-04-13-private-projects-design.md
plaibox-app/: .gitignore  README.md  package-lock.json  package.json
plaibox-app/src/: action-bar.js  app.js  index.html  notes.js  sidebar.js  styles.css  terminal.js
plaibox-app/src-tauri/: Cargo.toml  tauri.conf.json
plaibox-app/src-tauri/capabilities/: default.json
plaibox-app/src-tauri/icons/: icon.icns
plaibox-app/src-tauri/src/: lib.rs  main.rs  notes.rs  projects.rs  state.rs  terminal.rs  watcher.rs
plaibox-app/src-tauri/tests/: notes_test.rs  projects_test.rs  state_test.rs
src/plaibox/: cli.py  config.py  metadata.py  project.py  shell.py  sync.py
src/plaibox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_metadata.py  test_project.py  test_shell.py  test_sync.py
