[package]
name = "plaibox-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "plaibox_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = { version = "7", features = ["macos_fsevent"] }
portable-pty = "0.8"
dirs = "6"
chrono = "0.4"
shellexpand = "3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
